# thefuck3.14

./: .gitignore  setup.cfg  setup.py
thefuck/: utils.py
