
[metadata]
name = thefuck-3.14
version = 3.33
author = nvbn (original), maintained by Witnz
author_email =
description = Updated and maintained fork of ‘thefuck’ with support for Python 3.11–3.14 and improved Windows/PowerShell compatibility.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE.md
url = https://github.com/Witnz/thefuck3.14
project_urls =
    Source = https://github.com/Witnz/thefuck3.14
    Issues = https://github.com/Witnz/thefuck3.14/issues
keywords = shell, cli, productivity, command-correction, powershell, zsh, bash
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: Console
    Topic :: Utilities
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14

[options]
packages = find:
python_requires = >=3.11
include_package_data = true

[options.packages.find]
exclude =
    tests
    tests.*

[options.entry_points]
console_scripts =
    thefuck = thefuck.main:main
    fuck = thefuck.main:main
